# ox

./: CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile.toml  README.md  UNWRAP_AUDIT.md  WINDOWS_PTY_IMPLEMENTATION.md  build.ps1  test_panic_fix.sh  test_path_utils.lua  todo.md
.github/workflows/: check-unwrap.yml
docs/: CLIPBOARD.md  ERROR_HANDLING.md  PLUGIN_PATH_HANDLING.md  PTY_IMPLEMENTATION.md  WINDOWS_TERMINAL.md
kaolinite/src/: event.rs
kaolinite/tests/: test.rs
plugins/: emmet.lua  git.lua  live_html.lua
src/: cli.rs  clipboard.rs  conpty_windows.rs  dirs.rs  error.rs  lib.rs  main.rs  pty.rs  pty_cross.rs  pty_error.rs  pty_tests.rs  regex_cache.rs  terminal.rs  ui.rs
src/config/: assistant.rs  editor.rs  interface.rs  mod.rs  path_utils.rs
src/editor/: cursor.rs  documents.rs  editing.rs  interface.rs  mod.rs
src/plugin/: bootstrap.lua  plugin_manager.lua
tests/: clipboard_enhanced_test.rs  clipboard_test.rs  cross_platform_pty_tests.rs  windows_pty_tests.rs
