[workspace]
resolver = "2"
members = [
  "kaolinite",
]

[package]
name = "ox"
version = "0.7.7"
edition = "2021"
authors = ["Curlpipe <11898833+curlpipe@users.noreply.github.com>"]
description = "A simple but flexible text editor."
homepage = "https://github.com/curlpipe/ox"
repository = "https://github.com/curlpipe/ox"
readme = "README.md"
include = ["src/*.rs", "Cargo.toml", "config/.oxrc"]
categories = ["text-editors"]
keywords = ["text-editor", "editor", "terminal", "tui"]
license = "GPL-2.0"

[lib]
name = "ox"
path = "src/lib.rs"

[[bin]]
name = "ox"
path = "src/main.rs"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ox", dest = "/usr/bin/ox", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/ox/LICENSE", doc = true, mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/ox/README.md", doc = true, mode = "0644" }
]

#[profile.release]
#debug = true
#lto = true
#panic = "abort"
#codegen-units = 1

[dependencies]
alinio = "0.2.1"
base64 = "0.22.1"
crossterm = "0.28.1"
jargon-args = "0.2.7"
kaolinite = { path = "./kaolinite" }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
error_set = "0.7"
shellexpand = "3.1.0"
synoptic = "2.2.9"
regex = "1.11.1"
log = "0.4"
once_cell = "1.20.2"

# Non-windows dependencies (for terminal)
[target.'cfg(not(target_os = "windows"))'.dependencies]
ptyprocess = "0.4.1"
mio = { version = "1.0.3", features = ["os-ext"] }
nix = { version = "0.29.0", features = ["fs"] }

# Windows dependencies (for terminal)
[target.'cfg(target_os = "windows")'.dependencies]
portable-pty = "0.9.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console", 
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_WindowsProgramming",
    "Win32_Globalization",
] }
winapi = { version = "0.3", features = ["consoleapi", "processthreadsapi", "wincon", "handleapi", "synchapi", "winbase", "namedpipeapi", "fileapi"] }

[dev-dependencies]
tempfile = "3.8"
